# TrackMAG

./: LICENSE.md  README.md
.github/workflows/: bootloader.yaml  firmware.yaml
bootloader/: .cproject  .gitignore  Makefile  main.c
cad/: TrackMAG_v1_Case.FCStd
docs/: TrackMAG_v1.x3d  TrackMAG_v1_PCB.x3d  dfu.css  index.html
firmware/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  OpenOCD.cfg  STM32F103C8TX_FLASH.ld  STM32F103C8TX_FLASH_Debug.ld  STM32F103C8TX_FLASH_Release.ld  TrackMAG.ioc  TrackMAG_Debug.launch  TrackMAG_Release.launch  TrackMAG_v1.hid  arm-none-eabi-gcc.cmake  dictionary.txt  stm32f1x_128k.cfg
firmware/Bootloader Ready/: TrackMAG.elf  TrackMAG.list  TrackMAG.map  makefile  objects.list  objects.mk  sources.mk
firmware/Bootloader Ready/Core/Src/: app_trackmag.cyclo  app_trackmag.d  app_trackmag.su  crc.d  dma.d  gpio.d  i2c.cyclo  i2c.d  i2c.su  main.cyclo  main.d  main.su  stm32f1xx_hal_msp.d  stm32f1xx_hal_timebase_tim.d  stm32f1xx_hal_timebase_tim.su  stm32f1xx_it.cyclo  stm32f1xx_it.d  stm32f1xx_it.su  subdir.mk  system_stm32f1xx.cyclo  system_stm32f1xx.d  usart.cyclo  usart.d  usart.su
firmware/Bootloader Ready/Core/Startup/: subdir.mk
firmware/Bootloader Ready/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal.d  stm32f1xx_hal_cortex.d  stm32f1xx_hal_crc.cyclo  stm32f1xx_hal_crc.d  stm32f1xx_hal_crc.su  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_i2c.d  stm32f1xx_hal_pcd.cyclo  stm32f1xx_hal_pcd.d  stm32f1xx_hal_pcd.su  stm32f1xx_hal_pcd_ex.d  stm32f1xx_hal_pwr.d  stm32f1xx_hal_rcc.cyclo  stm32f1xx_hal_rcc.d  stm32f1xx_hal_rcc_ex.d  stm32f1xx_hal_tim.cyclo  stm32f1xx_hal_tim.d  stm32f1xx_hal_tim_ex.cyclo  stm32f1xx_hal_tim_ex.d  stm32f1xx_hal_uart.d  stm32f1xx_ll_usb.d  stm32f1xx_ll_usb.su  subdir.mk
firmware/Bootloader Ready/Drivers/lis2mdl-pid/: lis2mdl_reg.cyclo  lis2mdl_reg.d  lis2mdl_reg.su  subdir.mk
firmware/Bootloader Ready/Drivers/lsm6ds3tr-c-pid/: lsm6ds3tr-c_reg.cyclo  lsm6ds3tr-c_reg.d  lsm6ds3tr-c_reg.su  subdir.mk
firmware/Bootloader Ready/Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Src/: subdir.mk  usbd_customhid.cyclo  usbd_customhid.d  usbd_customhid.su
firmware/Bootloader Ready/Middlewares/ST/STM32_USB_Device_Library/Core/Src/: subdir.mk  usbd_core.d  usbd_ctlreq.cyclo  usbd_ctlreq.d  usbd_ioreq.d
firmware/Bootloader Ready/USB_DEVICE/App/: subdir.mk  usb_device.d  usbd_custom_hid_if.cyclo  usbd_custom_hid_if.d  usbd_custom_hid_if.su  usbd_desc.d
firmware/Core/Inc/: app_trackmag.h  mag_handler.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
firmware/Core/Src/: app_trackmag.c  gpio.c  mag_handler.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  usart.c
firmware/Drivers/lis2mdl-pid/: README.md  Release_Notes.html  Release_Notes.md
firmware/USB_DEVICE/App/: usb_device.c  usbd_custom_hid_if.c  usbd_custom_hid_if.h  usbd_desc.c
gh-pages/: index.html
hardware/: .gitignore  TrackMAG.kicad_dru  TrackMAG.kicad_pcb  TrackMAG.kicad_prl  TrackMAG.kicad_pro  TrackMAG.kicad_sch  fp-lib-table  sym-lib-table
hardware/libraries/: LSM6DS3TR-C.kicad_sym  TrackMAG.kicad_sym  USBLC6-2P6.kicad_sym
hardware/libraries/TrackMAG.pretty/: C_0402_1005Metric.kicad_mod  LGA-12_2x2mm_P0.5mm.kicad_mod  LGA-14_3x2.5mm_P0.5mm_LayoutBorder3x4y.kicad_mod  PinHeader_1x03_P2.54mm_UART.kicad_mod  PinHeader_1x05_P2.54mm_Debug.kicad_mod  R_0402_1005Metric.kicad_mod  SOT-666.kicad_mod  SW_Push_1P1T_XKB_TS-1187A.kicad_mod  SW_Push_1P1T_XKB_TS-1187A_BOOT.kicad_mod  SW_Push_1P1T_XKB_TS-1187A_CALIBRATE.kicad_mod  SW_Push_1P1T_XKB_TS-1187A_RESET.kicad_mod  USB_C_Receptacle_G-Switch_GT-USB-7010ASV.kicad_mod
(+6 files in other folders)
